--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form method="POST" action="/rooms">
-        <label for="user">user</label>
-        <input type="text" name="user" id="user">
-        
-        <input type="submit" value="">
+<%- include('./extends/header.ejs') -%>
+
+    <form method="POST" action="/rooms" id="create-room-form">
+        <h2>chat anonymously</h2>
+        <p id="paragraph">on the internet no one knows you're a cat</p>
+        <!-- <label for="user">user</label>
+        <input type="text" name="user" id="user"> -->
+        <input type="submit" value="create room">
     </form>
 
-    
-</body>
-</html>
+    <script src="../public/javascripts/rooms.js"></script>
+
+<%- include('./extends/footer.ejs') -%>
